--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@
 
             <div class="blog-section">
                 <h2>Our Mission</h2>
-                <p>Facilitating sustainable use of natural resources by investing in environmentally friendly projects and acknowledging environmental justice. [3] The main goal of the organization is to see an improved livelihood of people through sustainable exploitation of the available productive resources. [3]</p>
+                <p>Facilitating sustainable use of natural resources by investing in environmentally friendly projects and acknowledging environmental justice. The main goal of the organization is to see an improved livelihood of people through sustainable exploitation of the available productive resources.</p>
             </div>
 
             <div class="blog-section">
                 <h2>Our Vision</h2>
-                <p>Tanzania Eco-Tech and Conservation Hub (TEACH) is a non-profit conservation organization invested in nature conservation, ecotourism, environmental justice, sustainable engineering, and community empowerment. [3] Our vision is to ensure a sustained balance of nature. [3]</p>
+                <p>Tanzania Eco-Tech and Conservation Hub (TEACH) is a non-profit conservation organization invested in nature conservation, ecotourism, environmental justice, sustainable engineering, and community empowerment. Our vision is to ensure a sustained balance of nature.</p>
             </div>
 
             <aside class="pull-quote">
@@ -39,4 +39,5 @@
     <div id="footer-placeholder"></div>
     <script src="script.js" defer></script>
 </body>
+
 </html>
