--- a/impact.html
+++ b/impact.html
@@ -13,7 +13,7 @@
     <section class="news" style="padding-top: 4rem;">
         <div class="container">
             <h2 class="section-title">Our Impact</h2>
-            <p class="section-subtitle">Making a positive contribution in nature conservation, ecotourism, environmental justice, sustainable engineering, and community empowerment. [3]</p>
+            <p class="section-subtitle">Making a positive contribution in nature conservation, ecotourism, environmental justice, sustainable engineering, and community empowerment.</p>
             
             <div class="news-grid">
                 <!-- Card 1: Circular Carriers Program -->
@@ -44,7 +44,7 @@
                     <div class="card-content">
                         <span class="card-category">🎓 Professional Development</span>
                         <h3>Nature-Based Solutions (NbS) Programs</h3>
-                        <p>Our Continuing Professional Development (CPD) programs cover crucial topics like Nature-based Solutions (NbS), and renewable energy systems including solar and wind power. [2, 7]</p>
+                        <p>Our Continuing Professional Development (CPD) programs cover crucial topics like Nature-based Solutions (NbS), and renewable energy systems including solar and wind power.</p>
                         <a href="education.html" class="read-more">See Our Curriculum &rarr;</a>
                     </div>
                 </div>
@@ -55,4 +55,5 @@
     <div id="footer-placeholder"></div>
     <script src="script.js" defer></script>
 </body>
+
 </html>
