--- a/programs.html
+++ b/programs.html
@@ -27,7 +27,7 @@
                     <div class="icon">📚</div>
                     <div>
                         <h3>Conservation Education</h3>
-                        <p>Training programs and workshops that teach communities about environmental conservation, sustainable practices, and how technology can support ecological preservation. [3]</p>
+                        <p>Training programs and workshops that teach communities about environmental conservation, sustainable practices, and how technology can support ecological preservation.</p>
                     </div>
                 </div>
                 <div class="icon-list-item">
@@ -44,4 +44,5 @@
     <div id="footer-placeholder"></div>
     <script src="script.js" defer></script>
 </body>
+
 </html>
