--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <main class="page-content">
         <div class="container">
             <h1>About TEACH</h1>
-            <p class="blog-intro">We apply a Catapult (manati) Approach to creating hands-on solutions that merge technology with a sustainability ethos.</p>
+            <p class="blog-intro">We apply a Catapult (manati) Approach to creating hands-on solutions that merge technology with sustainability ethos.</p>
 
             <div class="blog-section">
                 <h2>Our Vision</h2>
@@ -38,4 +38,5 @@
 </body>
 
 </html>
+
 
