--- a/about.html
+++ b/about.html
@@ -27,9 +27,7 @@
                 <h1>Our Core Values</h1>
                 <p>TEACH believes in JEDI (justice, equity, diversity and inclusion), sustainability, transparency, and integrity as core values that guide every aspect of our work, from community engagement to project implementation.</p>
             </div>
-            <aside class="pull-quote">
-                <p>"JEDI (Justice, Equity, Diversity, and Inclusion), sustainability, transparency, and integrity."</p>
-            </aside>
+                <p class="pull-quote">"JEDI (Justice, Equity, Diversity, and Inclusion), sustainability, transparency, and integrity."</p>
         </div>
     </main>
 
@@ -38,6 +36,7 @@
 </body>
 
 </html>
+
 
 
 
