--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
         <!-- This hidden input is required, and you MUST replace the value -->
         <input type="hidden" name="access_key" value="becae407-3ee1-4ef5-8d7b-ca9ef259fdaa">
+        <input type="hidden" name="redirect" value="https://teachphilipo.github.io/thank-you.html">
 
         <div class="form-group">
             <label for="name">Name</label>
@@ -143,4 +144,5 @@
 </body>
 
 </html>
+
 
