--- a/renewables.html
+++ b/renewables.html
@@ -31,7 +31,7 @@
             <div class="blog-section">
                 <h2>💧 Harnessing the Sun: Solar Pump Installations</h2>
                 <p>Access to water is fundamental for agriculture and community well-being. Our solar-powered irrigation initiatives replace costly and polluting diesel pumps with clean, renewable energy. By installing solar water pumps and implementing efficient drip irrigation, we help local farmers conserve water, reduce operational costs, and significantly boost their crop productivity, ensuring greater food security.</p>
-                <img src="asset/solarAndWind" alt="A solar-powered irrigation system in a field in Tanzania" class="blog-image">
+                <img src="asset/solarAndWind.jpeg" alt="A solar-powered irrigation system in a field in Tanzania" class="blog-image">
             </div>
             
             <div class="blog-section">
@@ -39,7 +39,7 @@
                 <p>Our commitment to circularity shines in how we handle agricultural byproducts. Organic waste like sawdust, which is often discarded, becomes a valuable resource. Through a simple process, we convert this waste into <strong>biochar</strong>—a powerful soil amendment.</p>
                 
                 <!-- The new image is added here -->
-                <img src="asset/biochar" alt="the creation of biochar from agricultural waste." class="blog-image" style="margin-bottom: 2rem;">
+                <img src="asset/biochar.jpeg" alt="the creation of biochar from agricultural waste." class="blog-image" style="margin-bottom: 2rem;">
 
                  <div class="icon-list">
                     <div class="icon-list-item">
@@ -62,7 +62,7 @@
             <div class="blog-section">
                 <h2>🛍️ Closing the Loop: Biodegradable Bags</h2>
                 <p>In response to the national ban on plastic bags, our <strong>Circular Carriers Program</strong> offers a sustainable alternative rooted in local resources. This grassroots initiative turns discarded brown paper and a biodegradable glue from wheat flour into eco-friendly storage bags. This not only reduces waste but also provides a stable income and skill development for the 20 local women who produce and sell the bags, creating a vibrant, community-driven circular economy.</p>
-                <img src="asset/disposableGoods" alt="Women in the Circular Carriers Program creating biodegradable bags" class="blog-image">
+                <img src="asset/disposableGoods.jpeg" alt="Women in the Circular Carriers Program creating biodegradable bags" class="blog-image">
             </div>
 
             <section class="cta-section">
@@ -76,4 +76,5 @@
     <div id="footer-placeholder"></div>
     <script src="script.js" defer></script>
 </body>
+
 </html>
