--- a/renewables.html
+++ b/renewables.html
@@ -47,7 +47,7 @@
 
                 <!-- Card 2: Biochar Production -->
                 <div class="news-card">
-                    <img src="asset/engine.png" alt="A training session on the creation of biochar.">
+                    <img src="asset/biochar.jpeg" alt="A training session on the creation of biochar.">
                     <div class="card-content">
                         <span class="card-category">Circular Economy</span>
                         <h3>♻️ Biochar Production</h3>
@@ -80,3 +80,4 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
