--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="news-grid">
                 <!-- Card 1: Circular Carriers Program -->
                 <div class="news-card">
-                    <img src="asset/solarAndWind.jpeg" alt="Women working with paper bags">
+                    <img src="asset/womenCircularEconomy1.png" alt="Women working with paper bags">
                     <div class="card-content">
                         <span class="card-category">Community Empowerment</span>
                         <h3>Circular Carriers Program</h3>
@@ -144,5 +144,6 @@
 </body>
 
 </html>
+
 
 
