Update index.html google analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="style.css?v=1.3"> <!-- Version updated -->
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMBLL8PMNQ');
+</script>
+    
 <body>
     <!-- Header Placeholder -->
     <div id="header-placeholder"></div>
@@ -144,6 +154,7 @@
 </body>
 
 </html>
+
 
 
 
