--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@
     <meta name="description" content="Learn about the mission, vision, and values of TEACH - Tanzania Eco Tech and Conservation Hub.">
     <link rel="stylesheet" href="style.css?v=1.3">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMBLL8PMNQ');
+</script>
+    
 <body>
     <div id="header-placeholder"></div>
 
@@ -36,6 +46,7 @@
 </body>
 
 </html>
+
 
 
 
