--- a/circular-carriers.html
+++ b/circular-carriers.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Learn about our Circular Carriers Program.">
     <link rel="stylesheet" href="style.css?v=1.3">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMBLL8PMNQ');
+</script>
 <body>
     <div id="header-placeholder"></div>
 
@@ -43,3 +52,4 @@
 </body>
 
 </html>
+
