--- a/education.html
+++ b/education.html
@@ -8,6 +8,15 @@
     <!-- Using the main stylesheet -->
     <link rel="stylesheet" href="style.css?v=1.3"> 
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMBLL8PMNQ');
+</script>
 <body>
 
     <!-- Standard Header -->
@@ -87,4 +96,5 @@
     <!-- Standard Script Link -->
     <script src="script.js" defer></script>
 </body>
+
 </html>
