--- a/renewables.html
+++ b/renewables.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Discover how TEACH implements renewable solutions like solar water pumps, biochar production, and biodegradable bags to build resilient communities in Tanzania.">
     <link rel="stylesheet" href="style.css?v=1.3">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMBLL8PMNQ');
+</script>
 <body>
 
     <div id="header-placeholder"></div>
@@ -80,4 +89,5 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
 
