--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <span class="card-category">Technology</span>
                         <h3>New Solar Irrigation System Deployed</h3>
                         <p>We've successfully installed a new solar-powered water pump in the Njombe district, increasing crop yields for 50+ local farmers.</p>
-                        <a href="#" class="read-more">Read More &rarr;</a>
+                        <a href="renewables.html" class="read-more">Read More &rarr;</a>
                     </div>
                 </div>
             </div>
@@ -154,6 +154,7 @@
 </body>
 
 </html>
+
 
 
 
