--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,7 @@
 <!-- footer.html -->
 <footer>
     <div class="container">
-        <p>© 2025 TEACH - Tanzania Eco Tech and Conservation Hub</p>
+        <p>© 2025 TEACH - Tanzania Eco Tech And Conservation Hub</p>
     </div>
+
 </footer>
