--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <div class="news-card">
                     <img src="asset/womenCircularEconomy1.png" alt="Women working with paper bags">
                     <div class="card-content">
-                        <span class="card-category">Community Empowerment</span>
-                        <h3>Circular Carriers Program</h3>
-                        <p>A grassroots circular economy initiative turning paper waste into biodegradable bags, empowering local women and reducing plastic pollution.</p>
+                        <span class="card-category">Circular economy</span>
+                        <h3>Biochar</h3>
+                        <p>A By transforming agricultural waste into carbon-rich biochar, farmers can revitalize their soil, significantly boost crop yields, and build a more resilient and prosperous livelihood in the face of climate change.</p>
                         <a href="circular-carriers.html" class="read-more">Learn More &rarr;</a>
                     </div>
                 </div>
@@ -154,6 +154,7 @@
 </body>
 
 </html>
+
 
 
 
