--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="news-grid">
                 <!-- Card 1: Circular Carriers Program -->
                 <div class="news-card">
-                    <img src="asset/womenCircularEconomy1.png" alt="Women working with paper bags">
+                    <img src="asset/BeautfulBiochar.png" alt="Beautfully Biochar">
                     <div class="card-content">
                         <span class="card-category">Circular economy</span>
                         <h3>Biochar</h3>
@@ -154,6 +154,7 @@
 </body>
 
 </html>
+
 
 
 
