--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="card-category">Circular economy</span>
                         <h3>Biochar</h3>
                         <p>A By transforming agricultural waste into carbon-rich biochar, farmers can revitalize their soil, significantly boost crop yields, and build a more resilient and prosperous livelihood in the face of climate change.</p>
-                        <a href="circular-carriers.html" class="read-more">Learn More &rarr;</a>
+                        <a href="biochar.html" class="read-more">Learn More &rarr;</a>
                     </div>
                 </div>
 
@@ -154,6 +154,7 @@
 </body>
 
 </html>
+
 
 
 
